# trajectory-agent-benchmark

./: Makefile  README.md  pyproject.toml  requirements.txt  run.sh
docs/: architecture.md  decision_log.md  evaluation_framework.md  research_report.md
docs/diagrams/: architecture.mmd  sequence_reroute.mmd  state_machine.mmd
github_workflows/workflows/: ci.yml
presentation/: product_strategy_deck.md
scenarios/: scenario_01_port_congestion.json  scenario_02_carrier_failure.json  scenario_03_weather_delay.json  scenario_04_ambiguous_alert.json  scenario_05_no_viable_route.json
src/agentic_logistics/: __init__.py  cli.py
src/agentic_logistics/adapters/data/: carrier_repository_json.py
src/agentic_logistics/config/: settings.py
src/agentic_logistics/domain/: errors.py  models.py
src/agentic_logistics/evaluation/: judge.py  metrics.py  run_eval.py  scorer.py  trajectory.py
src/agentic_logistics/graph/: build_graph.py  edges.py  state.py
src/agentic_logistics/graph/nodes/: audit.py  (+8 more)
src/agentic_logistics/ports/: carrier_repository.py  model_provider.py
src/agentic_logistics/tools/: carrier_lookup.py  execution_simulator.py  registry.py  risk_scorer.py  route_optimizer.py  route_validator.py
tests/evaluation/: test_run_eval_end_to_end.py  test_trajectory_scoring.py
tests/regression/: test_architecture_boundaries.py  test_golden_scenarios.py
tests/unit/: test_domain_models.py  test_metrics.py  test_mock_provider.py  test_tools.py
tests/workflow/: test_graph_happy_path.py  test_graph_no_viable_route_escalation.py  test_graph_retry_on_tool_error.py
(+6 files in other folders)
