[project]
name = "agentic-logistics-eval"
version = "0.1.0"
description = "Autonomous carrier rerouting agent with trajectory-based evaluation harness"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2,<2.0",
    "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
